# django-habit-tracker

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ansible.cfg  compose.yml  manage.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js  webpack.config.js
.github/workflows/: dev.yml  prod.yml  release.yml  reusable-build.yml
ansible/: inventory.yml  site.yml
ansible/playbooks/: dev.yml  prod.yml
ansible/templates/: env.j2
ansible/vars/: common.yml
apps/core/: urls.py
apps/core/templates/: base.html
apps/core/templates/core/partials/: index.html
apps/habits/: admin.py  forms.py  models.py  urls.py  views.py
apps/habits/migrations/: 0001_initial.py  0003_alter_habitlog_options.py  0004_alter_habitlog_options.py  0005_alter_habitlog_options.py  0006_alter_habitlog_options.py  0007_remove_habitlog_completed.py
apps/habits/templates/habits/: home.html
apps/habits/templates/habits/partials/: add_habit.html  home.html
apps/users/: apps.py  middleware.py  views.py
apps/users/templates/registration/: login.html
apps/users/templates/registration/partials/: login.html  register.html
apps/users/templates/users/: profile.html
apps/users/templates/users/partials/: profile.html
assets/: index.js
config/: file_litestream.yml  litestream.yml  s3_litestream.yml
habit/: asgi.py  settings.py  urls.py  wsgi.py
habit/core/: apps.py
habit/settings/: base.py
habitstacker/: asgi.py  urls.py  wsgi.py
habitstacker/assets/: index.js
habitstacker/assets/css/: main.css
habitstacker/core/: apps.py  models.py  urls.py  utils.py  views.py
habitstacker/core/migrations/: 0001_initial.py
habitstacker/core/templates/: _messages.html  _navigation.html  base.html
habitstacker/core/templates/core/: home.html  index.html
habitstacker/habits/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
habitstacker/habits/migrations/: 0002_alter_habitlog_habit.py
habitstacker/habits/templates/habits/: home.html
habitstacker/settings/: base.py  dev.py  prod.py
habitstacker/templates/: _navigation.html  base.html
habitstacker/users/: apps.py  forms.py  middleware.py  models.py  urls.py  views.py
habitstacker/users/migrations/: 0001_initial.py
habitstacker/users/templates/registration/: login.html  register.html
habitstacker/users/templates/users/: profile.html
requirements/: dev.txt  prod.txt
scripts/: abs_litestream.yml  bootstrap.py  init.sh
webpack/: webpack.config.common.js  webpack.config.dev.js  webpack.config.prod.js
(+5 files in other folders)
