[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "habitstacker"
dynamic = ["version"]
description = 'A simple web app to track habits'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Madalin Popa", email = "contact@madalinpopa.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Django==5.0",
  "django-webpack-loader==2.0.1",
  "django-widget-tweaks==1.5.0",
  "django-guardian==2.4.0",
  "django-htmx==1.17.2",
  "python-dotenv==1.0.0",
  "whitenoise==6.6.0",
  "gunicorn==21.2.0",
]

[project.urls]
Documentation = "https://github.com/coderustle/habitstacker#readme"
Issues = "https://github.com/coderustle/habitstacker/issues"
Source = "https://github.com/coderustle/habitstacker"

[tool.hatch.version]
path = "src/habitstacker/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "djlint",
  "black",
  "ruff",
  "pre-commit",
]
[tool.hatch.envs.default.scripts]
server = "python manage.py runserver"
build = "yarn run build:dev"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.coverage.run]
source_pkgs = ["habitstacker", "tests"]
branch = true
parallel = true
omit = [
  "src/habitstacker/__about__.py",
]

[tool.coverage.paths]
habitstacker = ["src/habitstacker", "*/habitstacker/src/habitstacker"]
tests = ["tests", "*/habitstacker/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
